--- a/.travis.yml
+++ b/.travis.yml
@@ -7,16 +7,16 @@ addons:
  apt:
   packages:
   - pandoc
-# - fonts-lmodern
-# - texlive-xetex
-#  - texlive-base
-#  - texlive-luatex
-#  - texlive-fonts-recommended
-#  - texlive-fonts-extra
-#  - texlive-generic-recommended
-#  - texlive-latex-extra
-#  - texlive-latex-recommended
-#  - texlive-latex-base
+ - fonts-lmodern
+ - texlive-xetex
+  - texlive-base
+  - texlive-luatex
+  - texlive-fonts-recommended
+  - texlive-fonts-extra
+  - texlive-generic-recommended
+  - texlive-latex-extra
+  - texlive-latex-recommended
+  - texlive-latex-base
 #before_script:
 #- pip install jupyter
 #- pip install bash_kernel
