--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ addons:
   - texlive-latex-recommended
   - texlive-latex-base
 #before_script:
-#- pip install jupyter
+- pip install jupyter
 #- pip install bash_kernel
 #- python -m bash_kernel.install 
 script:
